--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,8 +5,9 @@
             "default": true,
             "package": "Summit Events App",
             "versionName": "ver 0.11",
-            "versionNumber": "0.4.0.NEXT",
-            "definitionFile": "orgs/dev.json"
+            "versionNumber": "0.5.0.NEXT",
+            "definitionFile": "orgs/dev.json",
+            "ancestorId": "04t4P000002T5ZCQA0"
         }
     ],
     "namespace": "summit",
@@ -14,10 +15,6 @@
     "sourceApiVersion": "48.0",
     "packageAliases": {
         "Summit Events App": "0Ho4P000000fxYiSAI",
-        "Summit Events App@0.1.0-2": "04t4P000002T5TrQAK",
-        "Summit Events App@0.2.0-1": "04t4P000002T5YiQAK",
-        "Summit Events App@0.2.0-2": "04t4P000002T5YnQAK",
-        "Summit Events App@0.3.0-1": "04t4P000002T5YsQAK",
         "Summit Events App@0.4.0-1": "04t4P000002T5ZCQA0"
     }
 }
