--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -17,6 +17,7 @@
         "Summit Events App": "0Ho4P000000fxYiSAI",
         "Summit Events App@0.4.0-1": "04t4P000002T5ZCQA0",
         "Summit Events App@0.5.0-1": "04t4P000002T5ZHQA0",
-        "Summit Events App@0.6.0-1": "04t4P000002T5ZbQAK"
+        "Summit Events App@0.6.0-1": "04t4P000002T5ZbQAK",
+        "Summit Events App@0.6.0-2": "04t4P000002T5ZgQAK"
     }
 }
