--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -7,7 +7,7 @@
             "versionName": "ver 0.11",
             "versionNumber": "0.7.0.NEXT",
             "definitionFile": "orgs/dev.json",
-            "ancestorId": "04t4P000002T5ZlQAK"
+            "ancestorId": "04t4P000002T5aPQAS"
         }
     ],
     "namespace": "summit",
