--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -20,6 +20,7 @@
         "Summit Events App@0.6.0-1": "04t4P000002T5ZbQAK",
         "Summit Events App@0.6.0-2": "04t4P000002T5ZgQAK",
         "Summit Events App@0.6.0-3": "04t4P000002T5ZlQAK",
-        "Summit Events App@0.7.0-1": "04t4P000002T5aPQAS"
+        "Summit Events App@0.7.0-1": "04t4P000002T5aPQAS",
+        "Summit Events App@0.8.0-1": "04t4P000002T5ayQAC"
     }
 }
