--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -25,6 +25,6 @@
         "Summit Events App@0.8.0-2": "04t4P000002T5fGQAS",
         "Summit Events App@0.9.0-1": "04t4P000002T5k7QAC",
         "Summit Events App@0.10.0-1": "04t4P000002T5kMQAS",
-        "Summit Events App@0.11.0-1": "04t4P000002T5rYQAS"
+        "Summit Events App@0.11.0-2": "04t4P000002T5rdQAC"
     }
 }
