--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,10 +4,10 @@
             "path": "force-app",
             "default": true,
             "package": "Summit Events App",
-            "versionName": "ver 0.11",
-            "versionNumber": "0.11.0.NEXT",
+            "versionName": "November 2020",
+            "versionNumber": "0.12.0.NEXT",
             "definitionFile": "orgs/dev.json",
-            "ancestorId": "04t4P000002T5kMQAS"
+            "ancestorId": "04t4P000002T5rdQAC"
         }
     ],
     "namespace": "summit",
@@ -25,6 +25,8 @@
         "Summit Events App@0.8.0-2": "04t4P000002T5fGQAS",
         "Summit Events App@0.9.0-1": "04t4P000002T5k7QAC",
         "Summit Events App@0.10.0-1": "04t4P000002T5kMQAS",
-        "Summit Events App@0.11.0-2": "04t4P000002T5rdQAC"
+        "Summit Events App@0.11.0-2": "04t4P000002T5rdQAC",
+        "Summit Events App@0.12.0-1": "04t4P000002T5wYQAS",
+        "Summit Events App@0.12.0-2": "04t4P000002T5wdQAC"
     }
 }
