--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -26,7 +26,6 @@
         "Summit Events App@0.9.0-1": "04t4P000002T5k7QAC",
         "Summit Events App@0.10.0-1": "04t4P000002T5kMQAS",
         "Summit Events App@0.11.0-2": "04t4P000002T5rdQAC",
-        "Summit Events App@0.12.0-1": "04t4P000002T5wYQAS",
-        "Summit Events App@0.12.0-2": "04t4P000002T5wdQAC"
+        "Summit Events App@0.12.0-3": "04t4P000002T5yPQAS"
     }
 }
