--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,10 +4,10 @@
             "path": "force-app",
             "default": true,
             "package": "Summit Events App",
-            "versionName": "March 2021",
-            "versionNumber": "0.14.0.NEXT",
+            "versionName": "May 2021",
+            "versionNumber": "0.15.0.NEXT",
             "definitionFile": "orgs/dev.json",
-            "ancestorId": "04t4P000002T62MQAS"
+            "ancestorId": "04t4P000002fPVIQA2"
         }
     ],
     "sfdcLoginUrl": "https://login.salesforce.com",
@@ -27,6 +27,7 @@
         "Summit Events App@0.11.0-2": "04t4P000002T5rdQAC",
         "Summit Events App@0.12.0-4": "04t4P000002T5zDQAS",
         "Summit Events App@0.13.0-1": "04t4P000002T62MQAS",
-        "Summit Events App@0.14.0-1": "04t4P000002fPVIQA2"
+        "Summit Events App@0.14.0-1": "04t4P000002fPVIQA2",
+        "Summit Events App@0.15.0-1": "04t4P000002fPbQQAU"
     }
 }
