--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,9 +5,9 @@
             "default": true,
             "package": "Summit Events App",
             "versionName": "May 2021",
-            "versionNumber": "0.15.0.NEXT",
+            "versionNumber": "0.16.0.NEXT",
             "definitionFile": "orgs/dev.json",
-            "ancestorId": "04t4P000002fPVIQA2"
+            "ancestorId": "04t4P000002fPbQQAU"
         }
     ],
     "sfdcLoginUrl": "https://login.salesforce.com",
@@ -28,6 +28,7 @@
         "Summit Events App@0.12.0-4": "04t4P000002T5zDQAS",
         "Summit Events App@0.13.0-1": "04t4P000002T62MQAS",
         "Summit Events App@0.14.0-1": "04t4P000002fPVIQA2",
-        "Summit Events App@0.15.0-1": "04t4P000002fPbQQAU"
+        "Summit Events App@0.15.0-1": "04t4P000002fPbQQAU",
+        "Summit Events App@0.16.0-1": "04t4P000002fPbuQAE"
     }
 }
