--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -10,6 +10,7 @@
             "ancestorId": "04t4P000002fPbQQAU"
         }
     ],
+    "namespace": "summit",
     "sfdcLoginUrl": "https://login.salesforce.com",
     "sourceApiVersion": "51.0",
     "packageAliases": {
