--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -31,8 +31,7 @@
         "Summit Events App@0.14.0-1": "04t4P000002fPVIQA2",
         "Summit Events App@0.15.0-1": "04t4P000002fPbQQAU",
         "Summit Events App@0.16.0-1": "04t4P000002fPbuQAE",
-        "Summit Events App@0.17.0-3": "04t4P000002fPkyQAE",
-        "Summit Events App@0.18.0-1": "04t4P000002fPl3QAE",
+        "Summit Events App@0.17.0-2": "04t4P000002fPktQAE",
         "Summit Events App@0.19.0-1": "04t4P000002fPl8QAE"
     }
 }
