--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -100,6 +100,7 @@ tasks:
 
     robot:
         options:
+            exclude: sample
             suites: robot/SummitEventsDX/tests
             options:
                 outputdir: robot/SummitEventsDX/results
