--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,9 +5,9 @@
             "default": true,
             "package": "Summit Events App",
             "versionName": "June 2021",
-            "versionNumber": "0.19.0.NEXT",
+            "versionNumber": "0.20.0.NEXT",
             "definitionFile": "orgs/dev.json",
-            "ancestorId": "04t4P000002fPktQAE"
+            "ancestorId": "04t4P000002fPl8QAE"
         }
     ],
     "namespace": "summit",
@@ -32,6 +32,7 @@
         "Summit Events App@0.15.0-1": "04t4P000002fPbQQAU",
         "Summit Events App@0.16.0-1": "04t4P000002fPbuQAE",
         "Summit Events App@0.17.0-2": "04t4P000002fPktQAE",
-        "Summit Events App@0.19.0-1": "04t4P000002fPl8QAE"
+        "Summit Events App@0.19.0-1": "04t4P000002fPl8QAE",
+        "Summit Events App@0.20.0-1": "04t4P000002fPn4QAE"
     }
 }
