--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -33,6 +33,8 @@
         "Summit Events App@0.16.0-1": "04t4P000002fPbuQAE",
         "Summit Events App@0.17.0-2": "04t4P000002fPktQAE",
         "Summit Events App@0.19.0-1": "04t4P000002fPl8QAE",
-        "Summit Events App@0.20.0-1": "04t4P000002fPn4QAE"
+        "Summit Events App@0.20.0-1": "04t4P000002fPn4QAE",
+        "Summit Events App@0.20.0-3": "04t4P000002fPo2QAE",
+        "Summit Events App@0.20.0-4": "04t4P000002fPoHQAU"
     }
 }
